# CG-Labs

./: .gitignore  README.md
lab1/: CMakeLists.txt
lab1/src/: application.cpp  application.h  input_handler.cpp  input_handler.h  main.cpp  rectangle.cpp  rectangle.h
lab2/: CMakeLists.txt
lab2/src/: app.cpp  app.h  command_handler.cpp  command_handler.h  object.cpp  object.h
lab3/: CMakeLists.txt
lab3/src/: app.cpp  app.h  camera.cpp  camera.h  command_handler.cpp  command_handler.h  main.cpp  object.cpp
lab4/src/: cube.cpp  cube.h  fragment_shader.glsl  main.cpp  vertex_shader.glsl
lab5/: CMakeLists.txt
lab5/src/: compute.comp  fragment.frag  main.cpp  vertex.vert
